Designer: fixed issues with z-index properties and added main script for perfect scroll
--HG--
branch : hotfixes-for-2-2-2


Former-commit-id: e782e90a019c64958a29aab030528b568e83cfa1

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-editor.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-editor.css.less
@@ -46,7 +46,7 @@
     section#header {
         position: relative;
         height: @header-height;
-        padding-left: @chapter-menu-panel-width;
+        padding-left: @chapter-menu-panel-width + 18px;
 
         > .designer-logo {
             position: absolute;
@@ -173,7 +173,7 @@
             position: absolute;
             left: 0;
             top: 0;
-            z-index: 1300;
+            z-index: 800;
             width: @chapter-menu-panel-width;
             height: 100%;
             background: @designer-editor-mediumblue-bg-color url(../i/chapter-panel-btn.png) 0 19px no-repeat;
@@ -250,6 +250,7 @@
                         margin-left: 18px;
                         margin-right: 24px;
                         margin-bottom: 0;
+                        margin-top: 29px;
                         .chapters-title-fontstyle();
                         padding-bottom: 8px;
                         border-bottom: 2px solid @tree-item-border-color;
@@ -305,7 +306,7 @@
                         &.current {
                             position: relative;
                             top: -2px;
-                            z-index: 10;
+                            z-index: 9;
                             min-height: @chapter-item-height;
 
                             .holder .inner a.chapter-panel-item-body {
@@ -778,7 +779,7 @@
             padding-top: 2px;
             top: -2px;
             height: @questionnaire-tree-item-height;
-            z-index: 998;
+            z-index: 498;
 
             &:hover {
                 background-color: @questionnarie-question-list-item-selected-color;
@@ -797,7 +798,7 @@
             }
 
             .dropdown {
-                z-index: 1001;
+                z-index: 501;
             }
 
 
@@ -819,7 +820,7 @@
             padding-top: 2px;
             top: -2px;
             height: @questionnaire-tree-item-height;
-            z-index: 999;
+            z-index: 499;
             background-color: @questionnarie-question-list-item-hover-color;
 
             .handler {
@@ -834,7 +835,7 @@
             }
 
             .dropdown {
-                z-index: 1000;
+                z-index: 500;
             }
 
             .qname-block {
@@ -864,7 +865,7 @@
 
 .ps-scrollbar-x-rail,
 .ps-scrollbar-y-rail {
-    z-index: 200;
+    z-index: 700;
 }
 
 .ps-scrollbar-y-rail {
@@ -873,7 +874,7 @@
 
 .position-fixed {
     position: fixed;
-    z-index: 1000;
+    z-index: 500;
 }
 
 .dropdown ul.dropdown-menu > li > a {
